<resources>
    <string name="app_name">SmartCare</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">CHEIL ELECTRIC</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">설정</string>

    <string name="menu_home">홈</string>
    <string name="menu_securityOffice">경비실</string>
    <string name="menu_lights">조명</string>
    <string name="menu_settings">설정</string>

    <string name="fab_content_description">음성인식</string>
    <string name="image_view_item_transform_content_description">Represents an image view in the
        item
    </string>
    <string name="device_admin_explanation">For experimentation purposes only</string>
    <string name="clear_all">Clear All</string>
    <string name="end_lock">Stop Kioskmode</string>
    <string name="start_lock">Start Kioskmode</string>
    <string name="button_bt_settings">Call BlueTooth Settings</string>
    <string name="button_wifi_settings">Call WIFI Settings</string>
    <string name="button_scan_ble">Scan BLE</string>
    <string name="medicine_info">약 드실 시간입니다.</string>
    <string name="health_info">건강정보</string>
    <string name="stay_mode">외출모드</string>
    <string name="title_activity_setting">SettingActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
</resources>